[tool.poetry]
name = "statistical_analysis"
version = "0.1.0"
description = ""
authors = ["Vasily <ionin.code@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
tqdm = "^4.64.0"
pandas = "^1.4.2"
python-dateutil = "^2.8.2"
numpy = "^1.22.3"
scipy = "^1.8.0"
jupyter = "^1.0.0"
plotly = "^5.7.0"
matplotlib = "^3.5.2"
sklearn = "^0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
